--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
-h1, h2 {
-  font-family: Lato;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.root {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 400px;
+}
+.card {
+  padding: 1em;
+  margin: 0.5em 0.5em;
+  background-color: aqua;
+  border: 2px solid red;
+}
+.row {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+h5 {
+  font-size: 1em;
+  display: inline;
+}
+p {
+  font-size: 1em;
+  display: inline;
+}
+img {
+  width: 200px;
+  height: 200px;
+  float: right;
 }
